--- a/src/NeoFarkas/NeoFarkas.fsproj
+++ b/src/NeoFarkas/NeoFarkas.fsproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Authorization.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
