--- a/src/NeoFarkas/NeoFarkas.fsproj
+++ b/src/NeoFarkas/NeoFarkas.fsproj
@@ -4,8 +4,9 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Common.fs" />
     <Compile Include="ApplicationService.fs" />
-    <Compile Include="Authorization.fs" />
+    <Compile Include="Web.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
