--- a/src/NeoFarkas/NeoFarkas.fsproj
+++ b/src/NeoFarkas/NeoFarkas.fsproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Common.fs" />
+    <Compile Include="Matrix.fs" />
     <Compile Include="ApplicationService.fs" />
     <Compile Include="Web.fs" />
     <Compile Include="Program.fs" />
